syntax = "proto3";
package pb;
option go_package = "../pb";

import "proto/entities/square.proto";
import "google/protobuf/empty.proto";

service GridService {
  rpc CreateGrid(google.protobuf.Empty) returns (GridResponse) {};
  rpc UpdateGrid(UpdateGridRequest) returns (UpdateGridResponse) {};
  rpc UpdateGridWeb(google.protobuf.Empty) returns (UpdateGridResponse) {};
  rpc DeleteGridByName(DeleteGridByNameRequest) returns (GridResponse) {};
}

// Message
message Grid {
  repeated Square square = 1;
  int32 color = 2;
}

message GridResponse {
  bool done = 1;
}

message UpdateGridResponse {
  bool status = 1;
  string message = 2;
}

message DeleteGridByNameRequest{
  string name = 1;
}

message UpdateGridRequest{
  repeated string pathChange = 3;
}